--- a/gesterapp/templates/gester/add_termo.html
+++ b/gesterapp/templates/gester/add_termo.html
@@ -3,7 +3,7 @@
 {% block htmltitle %}{{ block.super }} | A&ntilde;adir mate{% endblock %}
 
 {% block main %}
-    <h1>A&ntilde;adir mate</h1>
+    <h1>A&ntilde;adir termo</h1>
     <br />
     <form action="" method="post">
         {% csrf_token %}
