Add devolution funcionality and project is now fully functional

--- a/gesterapp/templates/gester/list_devolver.html
+++ b/gesterapp/templates/gester/list_devolver.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block htmltitle %}
-{{ block.super }} | Faltantes
+{{ block.super }} | Efectuar Devoluci&oacute;n
 {% endblock htmltitle %}
 
 {% block main %}
@@ -9,7 +9,7 @@
 {% if mensaje %}
     <div class="mensaje">{{ mensaje }}</div>
 {% endif %}
-        <h2>Faltantes</h2>
+        <h2>Efectuar Devoluci&oacute;n</h2>
         <table class="table table-hover">
             <thead>
                 <tr>
