--- a/gesterapp/templates/gester/list_prestamos.html
+++ b/gesterapp/templates/gester/list_prestamos.html
@@ -42,7 +42,7 @@
                     {% if foo.fecha_devolucion == None %}
                         -
                         {% else %}
-                        asd
+                        {{ foo.fecha_devolucion }}
                     {% endif %}
                     </td>
                 </tr>
